--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,21 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <finalName>BusinessServer</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <!-- http port -->
+          <port>8088</port>
+          <path>/</path>
+          <contextReloadable>true</contextReloadable>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
